--- a/京东样式.css
+++ b/京东样式.css
@@ -29,7 +29,6 @@ li{
 
 #top
 {
-    /*   宽度100% 高度30* 背景#f1f1f1   */
     width:100%;
     height:30px;
     background: #f1f1f1;
@@ -40,18 +39,15 @@ li{
     height: 30px;
     margin: 0px  auto;
     background: #f1f1f1;
-    /*background: red;*/
 }
 
 #top .top-main  .top-left
 {
-    /*   宽度93 高度30*    */
     width:93px;
     line-height: 30px;
     text-align: center;
     float: left;
 }
-
 
 #top .top-main  .top-left p
 {
@@ -73,18 +69,49 @@ li{
     float:right;
     height: 30px;
     line-height: 30px;
+    position: relative;
 }
 
-#top .top-main  .top-right li
+/*
+#top .top-main  .top-right .title-service  .li-frame
 {
     float:left;
     height: 30px;
     line-height: 30px;
-    padding: 0 8px;
-
-
+    position: relative;
 }
 
+#top .top-main  .top-right  .title-service .li-frame2
+{
+    height: 12px;
+    padding: 0px;
+    width: 1px;
+    background: #dddddd;
+    margin-top: 9px;
+    float: left;
+}
+
+*/
+#top .top-main  .top-right .title-service>li
+{
+
+    float:left;
+    height: 30px;
+    line-height: 30px;
+    /*padding: 0 8px;*/
+    margin: 0px  auto;
+}
+#top .top-main  .top-right .title-service li.detail-down
+{
+    position: relative;
+}
+
+#top .top-main  .top-right .title-service>li .dd-text
+{
+    height: 30px;
+    line-height: 30px;
+    padding: 0 8px;
+}
 #top .top-main  .top-right  ul .spacer
 {
     height: 12px;
@@ -94,14 +121,133 @@ li{
     margin-top: 9px;
 }
 
+#top .top-main  .top-right .down
+{
+    display: none;
+}
+/*我的京东 样式开始*/
+#myjd {
+    width: 280px;
+    height: 190px;
+    border: 1px solid #ddd;
+    background: white;
+    position: absolute;
+    z-index: 20;
+    top:30px;
+    left: 0px;
+    /*display: none;*/
+}
+
+#myjd .please-log {
+    height: 65px;
+    width: 250px;
+    margin-top: 15px;
+    margin-left:15px;
+}
+
+#myjd .please-log .log-pic {
+    float: left;
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    overflow: hidden;
+    margin-right: 10px;
+}
+#myjd .please-log .log-text {
+    float: left;
+}
+#myjd .please-log .log-text p.boldfont {
+   font-weight: bold;
+}
+#myjd .please-log .log-text p a {
+   margin: 0px 5px;
+}
+#myjd .myjd-link {
+    margin-left:15px;
+}
+#myjd .myjd-link li {
+    line-height: 25px;
+    height: 25px;
+}
+#myjd .myjd-link .link-left {
+    float: left;
+    margin-right: 55px;
+}
+#myjd .myjd-link .link-right {
+    float: left;
+}
+/*我的京东 样式结束*/
+
+/*关注京东  样式开始*/
+#concertjd{
+    width: 82px;
+    height: 100px;
+    border:  1px solid #ddd;
+    background: white;
+    position: absolute;
+    z-index: 20;
+    top:30px;
+    left: 0px;
+    /*display: none;*/
+}
+
+/*关注京东  样式结束*/
+
+
+/* 手机京东   样式开始 */
+#phonejd{
+    width: 82px;
+    height: 100px;
+    border:  1px solid #ddd;
+    background: white;
+    position: absolute;
+    z-index: 20;
+    top:30px;
+    left: 0px;
+}
+/* 手机京东   样式开始 */
+
+
+/* 客户服务  样式开始 */
+#guestService{
+    width: 82px;
+    height: 100px;
+    border:  1px solid #ddd;
+    background:white;
+    position: absolute;
+    z-index: 20;
+    top:30px;
+    left:0px;
+}
+    /*客户服务  样式结束  */
+
+
+
+/* 网站导航  样式开始 */
+#webGuid{
+    width: 1210px;
+    height: 100px;
+    border:  1px solid #ddd;
+    background:white;
+    position: absolute;
+    z-index: 20;
+    top:30px;
+    left: -1146px;
+}
+/* 网站导航  样式结束 */
+
 
 #top .top-main  .top-right  ul .phone
 {
    background: url(img/phone.png) no-repeat 0px 6px;
-    padding:0px 8px  0px 20px;
-    margin-left: 5px;
-
+    /*padding:0px 8px  0px 8px;*/
 }
+
+#top .top-main  .top-right  ul .phone span
+{
+    padding-left:18px;
+}
+
 
 
 #banner{
@@ -135,8 +281,6 @@ li{
 
 #top3-mid-up
 {
-
-
     width: 1210px;
     height: 100px;
     position: relative;
@@ -153,13 +297,11 @@ li{
 
 #search
 {
-
     position: absolute;
     top: 20px;
     left: 362px;
     width: 542px;
     height: 80px;
-
 }
 
 #search-input .search-word
@@ -172,7 +314,6 @@ li{
     font:12px/150% Arial,Verdana,"\5b8b\4f53";
     color: #666;
     text-indent: 5px;
-
 }
 
 #search-input .search-bot
@@ -205,7 +346,6 @@ li{
     right: 80px;
     text-align: center;
     line-height: 36px;
-
 }
 
 #shop .car
@@ -228,8 +368,6 @@ li{
 
 #top3-mid-low
 {
-
-
     width: 1210px;
     height: 44px;
 
@@ -237,7 +375,6 @@ li{
 
 #top3-mid-low  .kinds
  {
-
      background: #b1191a;
      width: 210px;
      height: 44px;
@@ -299,7 +436,6 @@ li{
 {
     height: 30px;
     width: 210px;
-    border: 1px green solid;
 }
 
 #main-mid .list li
@@ -421,14 +557,42 @@ li{
     cursor: pointer;
 }
 
+#main-mid .big-logo div{
+    width:730px;
+    height: 454px;
+    position: relative;
+}
 #main-mid .big-logo img
 {
     display: none;
-    /*position: absolute;
-    top: 0px;
-    left: 0px;
-    */
+}
 
+#main-mid .big-logo .button-union
+{
+    width: 27px;
+    height: 62px ;
+    background:#a4b2bf;
+    text-align: center;
+    line-height: 62px;
+    color: white;
+    opacity: 0.7;
+    font-size: 20px;
+    display: none;
+}
+
+#main-mid .big-logo .left-button
+{
+    position: absolute;
+    top: 190px;
+
+}
+
+#main-mid .big-logo .right-button
+{
+    position: absolute;
+    top: 190px;
+    right: 0px;
+    z-index: 2;
 }
 
 
@@ -452,34 +616,7 @@ li{
     color: white;
 }
 
-#main-mid .big-logo .button-union
-{
-width: 27px;
-height: 62px ;
-background:#a4b2bf;
-text-align: center;
-line-height: 62px;
-    color: white;
-    opacity: 0.5;
-    font-size: 20px;
-    display: none;
 
-}
-
-#main-mid .big-logo .left-button
-{
-    position: absolute;
-    top: 190px;
-
-}
-
-#main-mid .big-logo .right-button
-{
-    position: absolute;
-    top: 190px;
-    right: 0px;
-    z-index: 2;
-}
 
 #main-mid .news
 {
@@ -624,23 +761,72 @@ line-height: 62px;
 {
     clear: both;
    padding-top: 10px;
+
 }
 
-#mid-logo li
+#mid-logo .logo-first
 {
     float: left;
+    width: 210px;
 }
-#mid-logo .space
+#mid-logo .logo-run
 {
-    padding-right: 1px;
+    float: left;
+    width: 1000px;
+    height: 165px;
+    position: relative;
 }
+#mid-logo .logo-run .pic-4{
+     display: none;
+ }
+
+#mid-logo .logo-run .special{
+    display:block;
+}
+#mid-logo .logo-run .pic-4 li
+{
+    float: left;
+    width: 249px;
+    margin-right: 1px;
+    overflow: hidden;
+}
+
+#mid-logo .logo-run .btn
+{
+    width: 27px;
+    height: 62px ;
+    background:#333;
+    text-align: center;
+    line-height: 62px;
+    color: white;
+    opacity: 0.5;
+    font-size: 20px;
+    border: none;
+    display:none;
+}
+
+#mid-logo .logo-run .left-btn
+{
+    position: absolute;
+    top: 50px;
+    left: 0px;
+}
+
+#mid-logo .logo-run .right-btn
+{
+    position: absolute;
+    top: 50px;
+    right: 0px;
+}
+
+
+
 
 #love
 {
     width: 1210px;
     height: 290px;
     margin: 10px auto;
-
 }
 
 #love-title
@@ -906,6 +1092,172 @@ line-height: 62px;
 
 /*家电大促 结束*/
 
+/*天天低价 开始*/
+#dayT
+{
+    font-size: 16px;
+    position: relative;
+    width: 1210px;
+    margin:0px auto;
+    height: 30px;
+}
+
+#dayT .dayT-right
+{
+    position: absolute;
+    right: 215px;
+    top: 0px;
+}
+
+#dayP
+{
+    width: 1210px;
+    height: 281px;
+    margin: 0px auto 30px;
+    border: 1px solid #ededed;
+}
+#dayP .red-money
+{
+    font-size: 16px;
+    font-weight: bold;
+    color: red;
+    margin-top: 10px;
+}
+
+#dayP .dayP-left
+{
+    width: 239px;
+    height: 281px;
+    border-right: 1px solid #ededed;
+    float: left;
+}
+#dayP .dayP-left .contain1
+{
+    margin: 20px auto;
+    width: 160px;
+    height: 200px;
+}
+
+#dayP .dayP-mid
+{
+    width: 219px;
+    height: 281px;
+    border-right: 1px solid #ededed;
+    float: left;
+}
+#dayP .dayP-mid .dayP-mid-1
+{
+    width: 219px;
+    height: 140px;
+    border-bottom: 1px solid #ededed;
+    position: relative;
+}
+#dayP .dayP-mid .dayP-mid-2
+{
+    width: 219px;
+    height: 140px;
+    position: relative;
+}
+
+#dayP .dayP-mid .pic-posi
+{
+   position: absolute;
+    left: 10px;
+    top: 15px;
+}
+#dayP .dayP-mid .text{
+    position: absolute;
+    right: 15px;
+    top: 15px;
+    width: 90px;
+}
+
+#dayP .dayP-right
+{
+    width: 308px;
+    height: 281px;
+    border-right: 1px solid #ededed;
+    float: left;
+}
+
+
+#dayP .dayP-right .run-box
+{
+    width: 260px;
+    height: 260px;
+    margin: 40px auto;
+    overflow: hidden;
+}
+
+#dayP .dayP-right .run-box .distance
+{
+    margin: 10px 0px;
+    width: 260px;
+    height: 100px;
+
+}
+
+
+#dayP .dayP-right .run-box .run-pic
+{
+    width: 80px;
+    height: 100px;
+    float: left;
+}
+
+#dayP .dayP-right .run-box .run-text
+{
+    width: 160px;
+    height: 100px;
+    float: left;
+    margin-left: 20px;
+
+}
+#dayP .dayP-right .run-box .run-text .run-name
+{
+    width: 160px;
+    height: 45px;
+}
+
+#dayP .dayP-right .run-box .run-text .run-mess
+{
+    width: 160px;
+    height: 55px;
+    background: #f8f8f8;
+}
+
+
+/*天天低价 结束*/
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 /* 底部 slogan 开始*/
 #slogan-box {
    width: 100%;
@@ -1045,9 +1397,6 @@ line-height: 62px;
     z-index: 102;
 }
 
-
-
-
 #main-mid .list  a.red-font-a{
     color: red;
 }
@@ -1057,9 +1406,17 @@ line-height: 62px;
     background: red;
 }
 
-
-
-
+#top .top-main  .top-right .title-service>li .dd-text-add
+{
+    height: 31px;
+    line-height: 31px;
+    padding: 0 8px;
+    background: white;
+    position: relative;
+    z-index: 22;
+    border: solid #ddd;
+    border-width: 0px 1px ;
+}
 
 
 
